removed text-wrap bug, will have to fix my images another day.

--- a/styles/base.css
+++ b/styles/base.css
@@ -146,7 +146,6 @@ header .banner-logo {
 
 ul {
     list-style-type: none;
-    padding: 0;
     border-bottom: #333 solid thin;
     padding: 10px 0 10px 0;
     margin-top: 10px;
@@ -219,7 +218,6 @@ button {
     max-width: 100%;
     height: auto;
     margin-bottom: 15px;
-    text-wrap: var(--font-color);
 }
 
 main {
